# Knowledge_Graph_Rag

./: .envexample  .gitignore  Available_LLMs.md  LICENSE  Makefile  README.md  answering_agent.py  docker-compose.yaml  main.ipynb  pyproject.toml  tests.ipynb
config/: config.py
deploy/: kind-config.yaml
deploy/charts/graph-rag/: Chart.yaml  values.yaml
deploy/charts/graph-rag/templates/: neo4j-statefulset.yaml  ollama-deployment.yaml  qdrant-statefulset.yaml  rag-api-deployment.yaml  raw-data-pvc.yaml  web-ui-deployment.yaml
graph_agents/: answering_agent.py
graph_agents/config/: const.py
graph_agents/tools/: retrieve_answer.py
ingestion/: chunker_embedder.py  file_reader.py  orchestration.py
rag_handler/: neo4j_orchestrator.py  qdrant_orchestrator.py
services/ollama/: Dockerfile  start.sh
services/rag_api/: Dockerfile  pyproject.toml
services/rag_api/src/: main.py
services/rag_api/src/api/v1/: ingest.py
services/rag_api/src/core/: agent.py  config.py  retrieval.py
services/rag_api/src/ingestion/: orchestration.py
services/rag_api/src/models/: responses.py  schemas.py
services/rag_api/src/storage/: neo4j_client.py  qdrant_client.py
services/web_ui/: Dockerfile  pyproject.toml
services/web_ui/src/: app.py
services/web_ui/src/routes/: admin.py  upload.py
services/web_ui/src/static/css/: style.css
services/web_ui/src/templates/: admin.html  base.html  chat.html  upload.html
