[project]
name = "graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "litellm>=1.80.0",
    "neo4j>=5.17.0,<6.0.0", # Downgraded for neo4j-graphrag compatibility
    "neo4j-graphrag",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
]
